Mantis ChangeLog

2004.xx.xx  -  0.18.2

 * Sec #3595: bug_view_page.php: restricted custom fields are shown.
 * Sec #3596: print_bugnote_inc.php: private bugnotes are visible for not granted users (thanks to yarik123).
 * Enh #1088: Formatting of text in bugnotes, description areas.
 * Enh #1649: Replace 'Assign to Me' with 'Assign To:' and dropdown of developers.
 * Enh #3362: Generic email notifications.
 * Enh #3548: Support RSS for news syndication.
 * Enh #3552: Improved layout of Summary page and added 'Reporter / Resolution', 'Developer / Resolution' and 'Reporter Effectiveness' reports. (thanks to Lincoln Maskey)
 * Enh #3564: In anonymous mode, login should remember the current page.
 * Fix #1479: Users receive foreign-language e-mail. Now it is used default language for all e-mails.
 * Fix #3077: Inconsistency: "Assigned To" versus "Handler".
 * Fix #3118: My Account: after update of password, wrong information is given.
 * Fix #3135: Changing Print-Options does not work.
 * Fix #3440: "Allowed File Types" is case sensitive (also applies to disallowed file types).
 * Fix #3522: /news_update.php looks different from /main_page.php.
 * Fix #3537: Rewriting custom values with 0 when updating a bug.
 * Fix #3539: Simple view page shows advanced custom fields.
 * Fix #3541: Link to documentation refers to old website.
 * Fix #3568: Monitor deleted bugs? [monitor records are not deleted on bug deletion]
 * Fix #3569: Wrong number of search results displayed
 * Fix #3572: The summary_graph_imp_* pages have shortcut PHP tags.
 * Fix #3577: Unselecting custom fields causes undesired break lines in Excel.
 * Fix #3579: In the German localisation, $s_reset_request_msg was incorrectly terminated. 
 * Fix #3590: News displayed wrong in Firebird/Firefox.
 * Fix #3594: Incorrect encoding for Turkish localization.
 * Fix #3597: Custom fields names are not translated in email (thanks to yarik123).
 * Fix #3598: Bug history: consuming custom fields or not?